--- a/sql-note/mysql/数据库事务.md
+++ b/sql-note/mysql/数据库事务.md
@@ -128,19 +128,19 @@
 
 - 脏读（读未提交）
 
-  ![sql-note_数据库事务_脏读](..\..\picture\sql-note_数据库事务_脏读.jpg)
+  ![sql-note_数据库事务_脏读](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_脏读.jpg)
 
 - 避免脏读（读已提交）
 
-  ![sql-note_数据库事务_脏读](..\..\picture\sql-note_数据库事务_避免脏读.jpg)
+  ![sql-note_数据库事务_脏读](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_避免脏读.jpg)
 
 - 不可重复读
 
-  ![sql-note_数据库事务_不可重复度](..\..\picture\sql-note_数据库事务_不可重复度.jpg)
+  ![sql-note_数据库事务_不可重复度](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_不可重复度.jpg)
 
 - 可重复读
 
-  ![sql-note_数据库事务_可重复读](..\..\picture\sql-note_数据库事务_可重复读.jpg)
+  ![sql-note_数据库事务_可重复读](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_可重复读.jpg)
 
 #### **`InnoDB`怎么在`RR`隔离级别上处理幻读**
 
@@ -177,7 +177,7 @@
   - RR可以实现可重复读，在第一次读入的事务id = 1提交最新的数据,那么在之后再进行读入，读入到的数据还是事务id = 1提交的数据，无论中间是否修改。‘
   - RC不可实现可重复读，每次读取时，都是读取之前最新的已提交的数据。
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RR和RC隔离级别处理流程.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RR和RC隔离级别处理流程.jpg)
 
 - undo_log历史版本链
 
@@ -185,27 +185,27 @@
   - 快照读并不会创建一个版本，当前读才会。也就是除了最普通的`select`查询语句之外。
   - `DB_roll_ptr`表示回退指针，每个版本指向更旧的版本，依次类推。
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_undo_log历史版本链.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_undo_log历史版本链.jpg)
 
 - `ReadView` 快照读字段
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_ReadView字段.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_ReadView字段.jpg)
 
 - `RC`在MVCC下的`ReadView`及流程
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RC在MVCC下的ReadView及流程01.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RC在MVCC下的ReadView及流程01.jpg)
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RC在MVCC下的ReadView及流程02.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RC在MVCC下的ReadView及流程02.jpg)
 
 - `RR`在MVCC下的`ReadView`及流程
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RR在MVCC下的ReadView及流程01.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RR在MVCC下的ReadView及流程01.jpg)
 
 - RR在MVCC下不一定能避免幻读
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RR在MVCC下不一定能避免幻读.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RR在MVCC下不一定能避免幻读.jpg)
 
-  ![sql-note_数据库事务_RR和RC隔离级别处理流程](..\..\picture\sql-note_数据库事务_RR在MVCC下不一定能避免幻读解释.jpg)
+  ![sql-note_数据库事务_RR和RC隔离级别处理流程](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_数据库事务_RR在MVCC下不一定能避免幻读解释.jpg)
 
 ###### **Next-Key Lock**
 
