--- a/sql-note/mysql/数据库索引.md
+++ b/sql-note/mysql/数据库索引.md
@@ -10,7 +10,11 @@
 
 - B树：解决了红黑树存在的问题--每个节点只能有一个数据（节点的默认大小是16kb），同时强化了，要求：叶节点具有相同的深度。所有索引元素不重复，且递增。这使得树的高度大大降低。
 
+  ![sql-note_B树](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_B树.jpg)
+
 - B+树：对B树做了优化，下一层的节点包括了上一层的节点，最下面的叶子节点包括了全部的索引数据（B树中含有n个关键字的节点有n+1个子树；但是，B+树含有n个关键字的节点只有n个子树）；叶子节点组成双向循环链表（通过子节点索引节点的指针，从而支持范围查找），并指向数据；
+
+  ![sql-note_B+树](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_B+树.jpg)
 
 ##### 聚簇索引与非聚簇索引
 
