--- a/sql-note/mysql/数据库索引.md
+++ b/sql-note/mysql/数据库索引.md
@@ -46,7 +46,7 @@
 
   ![sql-note_InnoDB存储引擎页表结构01](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_InnoDB存储引擎页表结构01.jpg)
 
-  ![sql-note_InnoDB存储引擎页表结构02](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_InnoDB存储引擎页表结构02.png)
+  ![sql-note_InnoDB存储引擎页表结构02](https://raw.githubusercontent.com/ZYNORl/cloud-note/main/picture/sql-note_InnoDB存储引擎页表结构02.jpg)
 
 - 不推荐使用UUID，UUID 是指Universally Unique Identifier，翻译为中文是通用唯一识别码，UUID 的目的是让分布式系统中的所有元素都能有唯一的识别信息。如此一来，每个人都可以创建不与其它人冲突的 UUID，就不需考虑数据库创建时的名称重复问题。定义UUID 是由一组32位数的16进制数字所构成，是故 UUID 理论上的总数为16^32。也就是说若每纳秒产生1百万个 UUID，要花100亿年才会将所有 UUID 用完。
 
